dark mode/light mode

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,9 @@
 ---
 import "../styles/global.css";
+import Layout from "../layouts/Layout.astro";
 ---
-
-<h1 class="text-3xl font-bold underline">
-	Hello world!
-</h1>
+<Layout title="Selaura Client" home>
+	<main>
+		
+	</main>
+</Layout>
