--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import "../styles/global.css";
 import Layout from "../layouts/Layout.astro";
 ---
-<Layout title="Selaura Client" home>
+<Layout title="Selaura Client">
 	<main>
 		
 	</main>
