--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -56,7 +56,7 @@ import Footer from "../components/Footer.astro";
     </head>
     <body>
         <Navbar />
-        {Astro.slots.default()}
+        <!-- TODO: Content put here -->
         <Footer />
     </body>
 </html>
