--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<div class="w-full selaura-footer px-6 py-3 flex">
+<div class="w-full selaura-footer flex">
     Footer
 </div>
 
@@ -6,5 +6,8 @@
     .selaura-footer {
         background-color: var(--selaura-dark);
         color: var(--selaura-light);
+        position: relative;
+        bottom: 0;
+        padding: 1rem 2rem;
     }
 </style>
