--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,26 @@
-<div class="w-full selaura-footer flex">
-    Footer
+<div class="w-full selaura-footer flex gap-12">
+    <section class="flex gap-2">
+        <h2 class="text-2xl font-bold">Selaura Client</h2>
+        <p class="text-sm">
+            Free, open-source utility client for Minecraft: Bedrock Edition
+        </p>
+    </section>
+    <section class="flex gap-2">
+        <h2 class="text-2xl font-bold">Links</h2>
+        <div class="flex flex-row gap-2">
+            <a href="https://github.com/selauraclient/" target="_blank">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="https://discord.gg/37zCgBHGuS" target="_blank">
+                <i class="fa-brands fa-discord"></i>
+            </a>
+        </div>
+    </section>
+    <section>
+        <p class="flex justify-center text-bold">
+            Made with ❤️ by the Selaura Client Team.
+        </p>
+    </section>
 </div>
 
 <style>
@@ -8,6 +29,6 @@
         color: var(--selaura-light);
         position: relative;
         bottom: 0;
-        padding: 1rem 2rem;
+        padding: 6rem;
     }
 </style>
