font + more footer changes

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,11 +1,11 @@
-<div class="w-full selaura-footer flex gap-12">
-    <section class="flex gap-2">
-        <h2 class="text-2xl font-bold">Selaura Client</h2>
-        <p class="text-sm">
+<div class="w-full h-full selaura-footer flex flex-col gap-12">
+    <section class="flex flex-col gap-2">
+        <p style="font-size: 2.5rem">Selaura Client</h2>
+        <p>
             Free, open-source utility client for Minecraft: Bedrock Edition
         </p>
     </section>
-    <section class="flex gap-2">
+    <section class="flex flex-col gap-2">
         <h2 class="text-2xl font-bold">Links</h2>
         <div class="flex flex-row gap-2">
             <a href="https://github.com/selauraclient/" target="_blank">
@@ -16,8 +16,8 @@
             </a>
         </div>
     </section>
-    <section>
-        <p class="flex justify-center text-bold">
+    <section class="flex-col">
+        <p class="flex text-bold">
             Made with ❤️ by the Selaura Client Team.
         </p>
     </section>
