--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -97,5 +97,7 @@ import Footer from "../components/Footer.astro";
         font-optical-sizing: auto;
         font-style: normal;
         font-weight: 500;
+        font-family: "SF Pro", "Segoe UI", sans-serif;
+        font-size: 16px;
     }
 </style>
