--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,2 +1,3 @@
+@import url(https://cdn.jsdelivr.net/npm/sf-font@1.0.0/stylesheet.min.css);
 @import url(https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css);
 @import "tailwindcss";
