--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 <div class="w-full h-full selaura-footer flex flex-col gap-12">
     <section class="flex flex-col gap-2">
-        <p style="font-size: 2.5rem">Selaura Client</h2>
+        <p class="footer-title">Selaura Client</h2>
         <p>
             Free, open-source utility client for Minecraft: Bedrock Edition
         </p>
@@ -30,5 +30,10 @@
         position: relative;
         bottom: 0;
         padding: 6rem;
+    }
+
+    .footer-title {
+        font-size: 2.5rem;
+        font-family: 'Poppins', sans-serif;
     }
 </style>
