--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -32,9 +32,10 @@ import Button from "./Button.astro";
         padding: 6rem;
     }
 
-    .selaura-footer button {
+    .selaura-footer Button {
         background-color: var(--selaura-light);
         color: var(--selaura-dark);
+        border: none;
     }
 
     .footer-title {
