--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -32,7 +32,7 @@ import Button from "./Button.astro";
         padding: 6rem;
     }
 
-    .selaura-footer > section > button {
+    .selaura-footer > section > .selaura-button {
         background-color: var(--selaura-light);
         color: var(--selaura-dark);
         border: none;
