--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ import Button from "./Button.astro";
         <p>Free, open-source utility client for Minecraft: Bedrock Edition</p>
     </section>
     <section>
-        <Button text="Download" icon="arrow-right" iconPosition="right" />
+        <Button text="Download" icon="arrow-right" iconPosition="right" class:list={["selaura-footer-button"]} />
     </section>
     <section class="flex flex-col gap-2">
         <h2 class="text-2xl font-bold">Links</h2>
@@ -32,8 +32,14 @@ import Button from "./Button.astro";
         padding: 6rem;
     }
 
-    .selaura-footer > section > .selaura-button {
+    .selaura-footer-button {
         background-color: var(--selaura-light);
+        color: var(--selaura-dark);
+        border: none;
+    }
+
+    .selaura-footer-button:hover {
+        background-color: var(--selaura-soft);
         color: var(--selaura-dark);
         border: none;
     }
