--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -56,8 +56,8 @@ import Footer from "../components/Footer.astro";
     </head>
     <body class="flex flex-col min-h-screen">
         <Navbar />
-        <main class="flex-grow flex">
-            <!-- TODO: Content put here -->
+        <main class="flex-grow flex items-center selaura-main-content">
+            <slot />
         </main>
         <Footer />
     </body>
@@ -99,5 +99,9 @@ import Footer from "../components/Footer.astro";
         font-weight: 500;
         font-family: "Poppins", sans-serif;
         font-size: 16px;
+    }
+
+    .selaura-main-content {
+        padding: 2rem 4rem;
     }
 </style>
