much more main content

--- a/src/components/ThemeSwitcher.astro
+++ b/src/components/ThemeSwitcher.astro
@@ -51,11 +51,11 @@ import "../styles/global.css";
         display: none;
     }
 
-    #theme-toggle.theme-light i.fa-sun {
+    #theme-toggle.theme-light i.fa-moon {
         display: block;
     }
 
-    #theme-toggle.theme-dark i.fa-moon {
+    #theme-toggle.theme-dark i.fa-sun {
         display: block;
     }
 </style>
