--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,38 @@
 ---
 import "../styles/global.css";
 import Layout from "../layouts/Layout.astro";
+import Button from "../components/Button.astro";
 ---
 
 <Layout title="Selaura Client">
-	Lorem Ispum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-	non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	<section class="flex flex-col items-center w-full gap-4">
+		<p class="text-4xl text-bold">Efficiency in motion</p>
+		<p class="text-md text-center max-w-3xl">
+			Selaura Client is a free, open-source utility client for Minecraft:
+			Bedrock Edition. It is designed to be lightweight and efficient,
+			providing a smooth and enjoyable gaming experience.
+		</p>
+		<div class="flex flex-row gap-4">
+			<Button text="Why us?" icon="arrow-right" iconPosition="right" />
+			<Button text="Features" outline />
+		</div>
+		<div></div>
+		<span
+			class="flex w-full items-center justify-center max-w-full px-8 lg:max-w-none lg:flex-none lg:px-0"
+		>
+			<video
+				class="flex w-fit mb-24 rounded-3xl shadow-md lg:mx-auto lg:w-3/4 dark:opacity-80"
+				preload="none"
+				autoplay=""
+				loop=""
+				muted="true"
+				playsinline=""
+			>
+				<source
+					src="https://www.w3schools.com/html/mov_bbb.mp4"
+					type="video/mp4"
+				/>
+			</video>
+		</span>
+	</section>
 </Layout>
