--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,13 +14,13 @@ import Button from "./Button.astro";
         <section class="flex flex-col gap-2">
             <h2 class="text-2xl">Links</h2>
             <div class="flex flex-row gap-4">
-                <a href="https://github.com/selauraclient/" target="_blank">
+                <a href="/www/github//" target="_blank">
                     <i class="fa-brands fa-github"></i>
                 </a>
-                <a href="https://discord.gg/37zCgBHGuS" target="_blank">
+                <a href="/www/discord/" target="_blank">
                     <i class="fa-brands fa-discord"></i>
                 </a>
-                <a href="https://www.youtube.com/@selauraclient" target="_blank">
+                <a href="/www/youtube/" target="_blank">
                     <i class="fa-brands fa-youtube"></i>
                 </a>
             </div>
