--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,7 +5,9 @@ import Button from "./Button.astro";
 ---
 
 <div class="w-full bg-transparent selaura-navbar flex flex-row items-center gap-4 justify-center">
-    <div class="selaura-logo"></div>
+    <a href="/www/">
+        <div class="selaura-logo"></div>
+    </a>
     <div class="flex flex-grow"></div>
     <Button text="Download" outline icon="arrow-right" iconPosition="right"/>
     <ThemeSwitcher />
