text alignment fix

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Button from "../components/Button.astro";
 
 <Layout title="Selaura Client">
 	<section class="flex flex-col items-center w-full gap-4">
-		<p class="text-4xl text-bold">Efficiency in motion</p>
+		<p class="text-4xl text-bold text-center">Efficiency in motion</p>
 		<p class="text-md text-center max-w-3xl">
 			Selaura Client is a free, open-source utility client for Minecraft:
 			Bedrock Edition. It is designed to be lightweight and efficient,
@@ -21,7 +21,7 @@ import Button from "../components/Button.astro";
 			class="flex w-full items-center justify-center max-w-full px-8 lg:max-w-none lg:flex-none lg:px-0"
 		>
 			<video
-				class="flex w-fit mb-24 rounded-3xl shadow-md lg:mx-auto lg:w-3/4 dark:opacity-80"
+				class="flex w-fit mb-24 rounded-3xl shadow-md lg:mx-auto lg:w-3/4 dark:opacity-80 hover:scale-99 transition-all duration-300"
 				preload="none"
 				autoplay=""
 				loop=""
