--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -20,7 +20,7 @@ const props = Astro.props;
     props.href ? (
         <a href={props.href} target={props.target}>
             <button
-                class={`selaura-button ${props.muted ? "selaura-button-muted" : ""} ${props.outline ? "selaura-button-outline" : ""} ${props.footer ? "selaura-footer-button" : ""}`}
+                class={`shadow-lg selaura-button ${props.muted ? "selaura-button-muted" : ""} ${props.outline ? "selaura-button-outline" : ""} ${props.footer ? "selaura-footer-button" : ""}`}
             >
                 {props.icon && props.iconPosition === "left" && (
                     <i class={`fa-solid fa-${props.icon}`} />
@@ -33,7 +33,7 @@ const props = Astro.props;
         </a>
     ) : (
         <button
-            class={`selaura-button ${props.muted ? "selaura-button-muted" : ""} ${props.outline ? "selaura-button-outline" : ""} ${props.footer ? "selaura-footer-button" : ""}`}
+            class={`shadow-lg selaura-button ${props.muted ? "selaura-button-muted" : ""} ${props.outline ? "selaura-button-outline" : ""} ${props.footer ? "selaura-footer-button" : ""}`}
             disabled={props.disabled}
         >
             {props.icon && props.iconPosition === "left" && (
@@ -59,7 +59,6 @@ const props = Astro.props;
         text-align: center;
         cursor: pointer;
         border-radius: 0.5em;
-        border: 2px solid var(--selaura-light);
         background-color: var(--selaura-dark);
         color: var(--selaura-light);
         transition: all 0.3s ease;
