--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,7 +54,7 @@ import Footer from "../components/Footer.astro";
         <link rel="apple-touch-icon" href={img} />
         <title>{title ?? "Selaura Client"}</title>
     </head>
-    <body class="flex flex-col min-h-screen">
+    <body class="flex flex-col min-h-screen w-full">
         <Navbar />
         <main class="flex-grow flex items-center selaura-main-content">
             <slot />
