--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,7 +5,7 @@ import Button from "./Button.astro";
 ---
 
 <div class="w-full bg-transparent selaura-navbar flex flex-row items-center gap-4 justify-center">
-    <a href="/www/">
+    <a href="/">
         <div class="selaura-logo"></div>
     </a>
     <div class="flex flex-grow"></div>
