--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,8 +50,13 @@ import Footer from "../components/Footer.astro";
             content={description ??
                 "Selaura Client: Free, open-source utility client for Minecraft: Bedrock Edition"}
         />
-        <link rel="icon" href={img} />
-        <link rel="apple-touch-icon" href={img} />
+
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+        <link rel="apple-touch-icon" href="/favicon.ico" />
         <title>{title ?? "Selaura Client"}</title>
     </head>
     <body class="flex flex-col min-h-screen w-full">
