fix for weird bolding

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Button from "../components/Button.astro";
 <Layout title="Selaura Client">
 	<section class="flex flex-col items-center w-full gap-4">
 		<p class="text-4xl text-bold text-center">Efficiency in motion</p>
-		<p class="text-md text-center max-w-3xl">
+		<p class="text-md text-center max-w-3xl font-normal">
 			Selaura Client is a free, open-source utility client for Minecraft:
 			Bedrock Edition. It is designed to be lightweight and efficient,
 			providing a smooth and enjoyable gaming experience.
