--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -9,7 +9,7 @@ import Button from "./Button.astro";
         <div class="selaura-logo"></div>
     </a>
     <div class="flex flex-grow"></div>
-    <Button text="Download" outline icon="arrow-right" iconPosition="right"/>
+    <Button text="Download" outline icon="arrow-right" iconPosition="right" href="/download"/>
     <ThemeSwitcher />
 </div>
 
