--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,11 +8,11 @@ import Button from "./Button.astro";
         <p>Free, open-source utility client for Minecraft: Bedrock Edition</p>
     </section>
     <section>
-        <Button text="Download" icon="arrow-right" iconPosition="right" footer />
+        <Button text="Download" icon="arrow-right" iconPosition="right" footer href="/download/" />
     </section>
     <section class="flex flex-row justify-between w-lg">
         <section class="flex flex-col gap-2">
-            <h2 class="text-2xl">Links</h2>
+            <h2 class="text-1xl">Links</h2>
             <div class="flex flex-row gap-4">
                 <a href="/github/" target="_blank">
                     <i class="fa-brands fa-github"></i>
@@ -26,7 +26,7 @@ import Button from "./Button.astro";
             </div>
         </section>
         <section class="flex flex-col gap-2">
-            <h2 class="text-2xl">About Us</h2>
+            <h2 class="text-1xl">About Us</h2>
             <div class="flex flex-col gap-4">
                 
             </div>
