--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -60,7 +60,7 @@ import Footer from "../components/Footer.astro";
     </head>
     <body class="flex flex-col min-h-screen w-full">
         <Navbar />
-        <main class="flex-grow flex items-center selaura-main-content">
+        <main class="flex flex-col flex-grow items-center selaura-main-content gap-20">
             <slot />
         </main>
         <Footer />
