--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Button from "../components/Button.astro";
 			providing a smooth and enjoyable gaming experience.
 		</p>
 		<div class="flex flex-row gap-4">
-			<Button text="Try it Now" href="/download.html" />
+			<Button text="Try it Now" href="/download" />
 			<Button text="Donate" icon="arrow-right" iconPosition="right" outline href="https://ko-fi.com/selauraclient" target="_blank" />
 		</div>
 		<br/>
