--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -16,7 +16,7 @@ import Sticker from "../components/Sticker.astro"
             <div class="flex gap-4 flex-row justify-between">
                 <div class="flex flex-row gap-2 items-center">
                     <i class="fa-brands fa-windows text-xl"></i>
-                    <p class="text-xl text-bold">Windows 10/11 (x64 bit)</p>
+                    <p class="text-xl text-bold">Windows 10/11 (64-bit)</p>
                     <Sticker type="alpha"></Sticker>
                 </div>
                 <Button text="Download" href="https://cdn.selauraclient.com/windows/Selaura.dll"></Button>
