--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -13,6 +13,7 @@ interface Props {
     sticker?: "alpha" | "beta" | "release";
     iconPosition?: "left" | "right";
     footer?: boolean;
+    class?: string;
 }
 
 const props = Astro.props;
@@ -22,7 +23,7 @@ const props = Astro.props;
     props.href ? (
         <a href={props.href} target={props.target}>
             <button
-                class={`shadow-lg selaura-button ${props.muted ? "selaura-button-muted" : ""} ${props.outline ? "selaura-button-outline" : ""} ${props.footer ? "selaura-footer-button" : ""}`}
+                class={`shadow-lg selaura-button ${props.muted ? "selaura-button-muted" : ""} ${props.outline ? "selaura-button-outline" : ""} ${props.footer ? "selaura-footer-button" : ""} ${props.class ?? ""}`}
             >
                 {props.icon && props.iconPosition === "left" && (
                     <i class={`fa-solid fa-${props.icon}`} />
@@ -38,7 +39,7 @@ const props = Astro.props;
         </a>
     ) : (
         <button
-            class={`shadow-lg selaura-button ${props.muted ? "selaura-button-muted" : ""} ${props.outline ? "selaura-button-outline" : ""} ${props.footer ? "selaura-footer-button" : ""}`}
+            class={`shadow-lg selaura-button ${props.muted ? "selaura-button-muted" : ""} ${props.outline ? "selaura-button-outline" : ""} ${props.footer ? "selaura-footer-button" : ""} ${props.class ?? ""}`}
             disabled={props.disabled}
         >
             {props.icon && props.iconPosition === "left" && (
