--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -59,7 +59,7 @@ import Sticker from "../components/Sticker.astro"
         <p class="text-md max-w-3xl">
             Look at these for extra resources, or direct downloads to binaries for Selaura Client.
         </p>
-        <div class="flex flex-row gap-4">
+        <div class="flex flex-col sm:flex-row gap-4">
             <Button text="Source Code" icon="notes" iconPosition="left" href="/github/" target="_blank" />
             <Button text="Scripting Documentation" icon="external-link" iconPosition="left" href="https://docs.selauraclient.com" target="_blank" />
         </div>
