--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -16,7 +16,7 @@ import Sticker from "../components/Sticker.astro"
             <div class="flex flex-col sm:flex-row gap-4 justify-between">
                 <div class="flex flex-row gap-2 items-center">
                     <i class="fa-brands fa-windows text-xl"></i>
-                    <p class="text-xl font-bold">Windows 10/11 (64-bit)</p>
+                    <p class="text-xl">Windows 10/11 (64-bit)</p>
                     <Sticker type="alpha" />
                 </div>
                 <Button
@@ -30,7 +30,7 @@ import Sticker from "../components/Sticker.astro"
             <div class="flex flex-col sm:flex-row gap-4 justify-between">
                 <div class="flex flex-row gap-2 items-center">
                     <i class="fa-brands fa-android text-xl"></i>
-                    <p class="text-xl font-bold">Android 7+ (ARM64)</p>
+                    <p class="text-xl">Android 7+ (ARM64)</p>
                     <Sticker type="alpha" />
                 </div>
                 <Button
@@ -44,7 +44,7 @@ import Sticker from "../components/Sticker.astro"
             <div class="flex flex-col sm:flex-row gap-4 justify-between">
                 <div class="flex flex-row gap-2 items-center">
                     <i class="fa-brands fa-linux text-xl"></i>
-                    <p class="text-xl font-bold">Linux (mcpelauncher-linux)</p>
+                    <p class="text-xl">Linux (mcpelauncher-linux)</p>
                     <Sticker type="alpha" />
                 </div>
                 <Button
